[package]
name = "imgseek"
edition = "2021"
version = "0.1.1"
authors = ["Paul-Erwan RIO <paulerwan.rio@proton.me>"]
license = "None"
homepage = "https://some/where"
description = """
Seeker tool for binaries in flash images
"""

[dependencies]
clap = "2.33"
thiserror = "1.0.31"
anyhow = "1.0.59"
ndarray = "0.15.6"
num-traits = "0.2.15"
term_size = "0.3.2"
colored = "2.0.0"
itertools = "0.10.5"

[build-dependencies]
clap = "2.33"
